# fraud-stream

./: .env.example  .flake8  .gitignore  CHANGELOG.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: org-ci-tests.yml
scripts/: setup_pipeline.py
src/config/: __init__.py  settings.py
src/data_generator/: __init__.py  fraud_injector.py  transaction_producer.py
src/schemas/: fraud_alert.avsc  transaction.avsc
src/streaming/: __init__.py  transaction_processor.py
src/utils/: __init__.py  data_quality.py  kafka_utils.py  security.py  snowflake_utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline_integration.py
tests/unit/: __init__.py  test_data_quality.py  test_fraud_injector.py  test_security.py  test_settings.py  test_transaction_producer.py
